# embedded_language_server

./: .gitignore  Cargo.toml  LICESNE  README.md
src/: lib.rs  main.rs
tests/: sample_config.toml  test_config.toml  unit_test.rs
tests/client_test_data/: test.txt
