[package]
name = "lsp_proxy"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

# async-lsp platform
[dependencies.async-lsp]
version = "0.2.3"
features = [
    "async-io",
    "client-monitor",
    "default",
    "forward",
    "omni-trait",
    "stdio",
    "tokio",
    "tracing",
]

[dependencies.tracing]
version = "0.1.37"

[dependencies.tracing-subscriber]
version = "0.3.16"

[dependencies.async-process]
version = "2"

[dependencies.futures]
version = "0.3.28"
features = ["async-await", "std"]
default-features = false

[dependencies.tower]
version = "0.5"

[dependencies.tokio]
version = "1.27.0"
features = ["io-std", "io-util", "macros", "process", "rt", "time"]

[dependencies.tokio-util]
version = "0.7.8"
features = ["compat"]

# server state
[dependencies.dunce]
version = "1.0.5"

[dependencies.dashmap]
version = "6.1.0"
features = ["rayon"]

[dependencies.rayon]
version = "1.12.0"

[dependencies.ropey]
version = "1.6.1"

# server features
[dependencies.deadpool-tiberius]
version = "0.1.9"

[dependencies.regex]
version = "1.12.3"

[dependencies.once_cell]
version = "1.21.4"

[dependencies.toml]
version = "1.1.2"

[dependencies.serde]
version = "1.0"

# other
[dependencies.clap]
version = "4.6.1"
features = ["cargo"]

[dependencies.anyhow]
version = "1.0.102"
