[package]
name = "embedded_language_server"
version = "0.1.1"
edition = "2024"
rust-version = "1.95"

# async-lsp platform
[dependencies.async-lsp]
version = "0.2.3"
features = [
    "async-io",
    "client-monitor",
    "default",
    "forward",
    "omni-trait",
    "stdio",
    "tokio",
    "tracing",
]

[dependencies.futures]
version = "0.3.28"
features = ["async-await", "std"]
default-features = false

[dependencies.tokio]
version = "1.27.0"
features = ["io-std", "io-util", "macros", "process", "rt", "time"]

[dependencies]
tokio-util = { version = "0.7.8", features = ["compat"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
async-process = "2"
tower = "0.5"

# server state
dunce = "1.0.5"
dashmap = { version = "6.1.0", features = ["rayon"] }
rayon = "1.12.0"
ropey = "1.6.1"

# server features
deadpool-tiberius = "0.1.9"
regex = "1.12.3"
once_cell = "1.21.4"
toml = "1.1.2"
serde = "1.0"

# other
clap = { version = "4.6.1", features = ["cargo", "derive"] }
clap_derive = "4.6.1"
anyhow = "1.0.102"

# security
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
sha2 = "0.11.0"
hex = "0.4.3"

# testing
[dev-dependencies]
assert_cmd = "2.2.1"
serde_json = "1.0.149"
