[package]
name = "embedded_language_server"
version = "0.1.2"
edition = "2024"
rust-version = "1.95"

[dependencies]
async-process = "2"
tokio-util = { version = "0.7.8", features = ["compat"] }
tower = "0.5"
tracing = "0.1.37"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.16"

# server state
dashmap = { version = "6.1.0", features = ["rayon"] }
dunce = "1.0.5"
rayon = "1.12.0"
ropey = "1.6.1"

# server features
deadpool-tiberius = "0.1.9"
nucleo-matcher = "0.3.1"
once_cell = "1.21.4"
regex = "1.12.3"
serde = "1.0"
toml = "1.1.2"

# other
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["cargo", "derive"] }
clap_derive = "4.6.1"

# security
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
hex = "0.4.3"
sha2 = "0.11.0"

# async-lsp platform
[dependencies.async-lsp]
version = "0.2.3"
features = [
  "default",
  "async-io",
  "client-monitor",
  "forward",
  "omni-trait",
  "stdio",
  "tokio",
  "tracing",
]

[dependencies.futures]
version = "0.3.28"
default-features = false
features = ["async-await", "std"]

[dependencies.tokio]
version = "1.27.0"
features = ["io-std", "io-util", "macros", "process", "rt", "time"]

# testing
[dev-dependencies]
assert_cmd = "2.2.1"
serde_json = "1.0.149"
